--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "@fullcalendar/timegrid": "^5.11.3",
     "@hello-pangea/dnd": "^16.2.0",
     "@hookform/resolvers": "^2.8.8",
-    "@lexical/markdown": "^0.8.0",
-    "@lexical/react": "^0.8.0",
+    "@lexical/markdown": "^0.7.5",
+    "@lexical/react": "^0.7.5",
     "@magicbell/magicbell-react": "^10.3.4",
-    "@nhost/react": "^1.13.2",
-    "@nhost/react-apollo": "^4.13.2",
+    "@nhost/react": "^0.17.0",
+    "@nhost/react-apollo": "^4.11.0",
+    "@stripe/react-stripe-js": "^1.16.4",
+    "@stripe/stripe-js": "^1.46.0",
     "algoliasearch": "^4.14.2",
     "crypto-hash": "^2.0.1",
     "d3": "^7.3.0",
@@ -52,7 +54,7 @@
     "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
     "katex": "^0.16.4",
-    "lexical": "^0.8.0",
+    "lexical": "^0.7.5",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "lodash.throttle": "^4.1.1",
@@ -64,7 +66,7 @@
     "react-hook-form": "^7.39.6",
     "react-i18next": "^11.16.7",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^6.8.0",
+    "react-router-dom": "^6.6.1",
     "react-transition-group": "^4.4.5",
     "rrule": "^2.7.1",
     "slugify": "^1.6.5",
@@ -84,7 +86,7 @@
     "@storybook/addon-essentials": "^6.5.15",
     "@storybook/addon-interactions": "^6.5.15",
     "@storybook/addon-links": "^6.5.15",
-    "@storybook/builder-vite": "^0.4.1",
+    "@storybook/builder-vite": "^0.2.6",
     "@storybook/react": "^6.5.15",
     "@storybook/testing-library": "0.0.13",
     "@types/d3": "^7.1.0",
@@ -111,9 +113,9 @@
     "patch-package": "^6.5.0",
     "prettier": "^2.6.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-visualizer": "^5.9.0",
+    "rollup-plugin-visualizer": "^5.8.0",
     "typescript": "^4.6.2",
-    "vite": "^4.1.1",
+    "vite": "^4.0.4",
     "vite-plugin-svgr": "^2.4.0",
     "vite-tsconfig-paths": "^4.0.3",
     "vitest": "^0.26.3"
