--- a/functions/.env.template
+++ b/functions/.env.template
@@ -6,3 +6,5 @@ ALGOLIA_SEARCH_API_KEY=
 ALGOLIA_ADMIN_API_KEY=
 MAGICBELL_API_KEY=
 MAGICBELL_API_SECRET=
+STRIPE_STARTUP_PLAN_PRICE_ID=
+STRIPE_ENDPOINT_SECRET=
