--- a/nhost/metadata/databases/default/tables/tables.yaml
+++ b/nhost/metadata/databases/default/tables/tables.yaml
@@ -24,6 +24,7 @@
 - "!include public_org_subscription.yaml"
 - "!include public_role.yaml"
 - "!include public_subscription_payment_status.yaml"
+- "!include public_subscription_plan_type.yaml"
 - "!include public_task.yaml"
 - "!include public_task_status.yaml"
 - "!include public_task_view.yaml"
