--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nhost/react-apollo": "^4.13.2",
     "@stripe/react-stripe-js": "^1.16.4",
     "@stripe/stripe-js": "^1.46.0",
+    "@tanstack/react-table": "^8.7.9",
     "algoliasearch": "^4.14.2",
     "crypto-hash": "^2.0.1",
     "d3": "^7.3.0",
