--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@magicbell/magicbell-react": "^10.3.4",
     "@nhost/react": "^1.13.2",
     "@nhost/react-apollo": "^4.13.2",
+    "@novu/notification-center": "^0.11.0",
     "algoliasearch": "^4.14.2",
     "crypto-hash": "^2.0.1",
     "d3": "^7.3.0",
