--- a/nhost/metadata/databases/default/tables/auth_users.yaml
+++ b/nhost/metadata/databases/default/tables/auth_users.yaml
@@ -161,3 +161,26 @@ update_permissions:
       check:
         id:
           _eq: X-Hasura-User-Id
+event_triggers:
+  - name: user-email-update-novu-subscriber-update
+    definition:
+      enable_manual: false
+      update:
+        columns:
+          - email
+          - new_email
+    retry_conf:
+      interval_sec: 10
+      num_retries: 0
+      timeout_sec: 60
+    webhook: '{{NHOST_BACKEND_URL}}/v1/functions/routes/updateNovuSubscriber'
+    headers:
+      - name: x-nhost-webhook-secret
+        value_from_env: NHOST_WEBHOOK_SECRET
+    cleanup_config:
+      batch_size: 10000
+      clean_invocation_logs: false
+      clear_older_than: 168
+      paused: true
+      schedule: 0 0 * * *
+      timeout: 60
