--- a/render.yaml
+++ b/render.yaml
@@ -2,26 +2,27 @@ previewsEnabled: false
 
 services:
   # Front webapp
-  - type: web
-    name: rolebase-front
-    env: static
-    branch: main
-    domains:
-      - rolebase.io
-    buildCommand: npm i && npm run build
-    staticPublishPath: ./dist
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
-    headers:
-      - path: /src/demos/*
-        name: Access-Control-Allow-Origin
-        value: '*'
-      - path: /assets/*
-        name: Access-Control-Allow-Origin
-        value: '*'
-    autoDeploy: true
+  # Disabled because we're using Netlify (faster)
+  # - type: web
+  #   name: rolebase-front
+  #   env: static
+  #   branch: main
+  #   domains:
+  #     - rolebase.io
+  #   buildCommand: npm i && npm run build
+  #   staticPublishPath: ./dist
+  #   routes:
+  #     - type: rewrite
+  #       source: /*
+  #       destination: /index.html
+  #   headers:
+  #     - path: /src/demos/*
+  #       name: Access-Control-Allow-Origin
+  #       value: '*'
+  #     - path: /assets/*
+  #       name: Access-Control-Allow-Origin
+  #       value: '*'
+  #   autoDeploy: true
 
   # Storybook
   - type: web
